v8/tests/messages/cannot-convert-to-primitive.out
native runtime.js:294: Uncaught TypeError: Cannot convert object to primitive value
  throw %MakeTypeError('cannot_convert_to_primitive', []);
  ^
